2004-01-12  Derek Atkins  <derek@ihtfp.com>

	* src/doc/Makefile.am: add new documentation: generic-druid-framework.txt
	* src/doc/generic-druid-framework.txt: new documentation

2004-01-07  Derek Atkins  <derek@ihtfp.com>

	* src/engine/Transaction.h: fix the xaccTransOrder() documentation
	  to be more accurate with the actual implementation.

	* src/doc/Makefile.am:
	* src/doc/qif.txt:
	  Add new qif importer documentation to the repository/dist

2004-01-06  Derek Atkins  <derek@ihtfp.com>

	* src/engine/qofinstance.c: revert fix from 01-01, because it's wrong.
	  Fix the actual problem, all the ...ReturnGUID() #define's which
	  don't check that it's passed a NULL value.
	* src/engine/Transaction.h:
	* src/engine/Account.h:
	  Fix ...ReturnGUID() to check whether it was passed a NULL object
	  and, if so, return the null GUID instead of crashing.
	* src/business/business-core/gncCustomer.h:
	* src/business/business-core/gncEmployee.h:
	* src/business/business-core/gncInvoice.h:
	* src/business/business-core/gncJob.h:
	* src/business/business-core/gncTaxTable.h:
	* src/business/business-core/gncVendor.h:
	  Fix ...RetGUID() to check whether it was passed a NULL object
	  and, if so, return the null GUID instead of crashing.
	
	* README.cvs: make it even more explicit that you should not run configure
	* src/engine/Makefile.am: remove the circular dependency I added earlier
	* src/engine/gw-engine-spec.scm: don't include gnc-engine-util.h (it's
	  not required and may break things).
	* src/engine/gnc-trace.[ch]: move gnc_should_log() out of the .h
	  and into the .c (making it a function instead of an array) due
	  to symbol problems with libgw-engine.  With it the other way the
	  test-account-create test was throwing an error about an
	  undefined symbol (gnc_log_modules).
	  NOTE: If you don't like this de-optimization then feel free to remove
	  all the P*() calls from engine-helpers.c and then revert gnc-trace.