@@ -1,5 +1,11 @@
 2004-01-12  Derek Atkins  <derek@ihtfp.com>
 
+	* src/app-utils/file-utils.[ch]:  add gnc_getline() function
+	  to read an unlimited line-length from a file (so you're
+	  not limited to a buffer size with fgets() and the like).
+	  It is similar to the getline(3) on Linux except the API
+	  is different and it will always set the return string.
+
 	* src/doc/Makefile.am: add new documentation: generic-druid-framework.txt
 	* src/doc/generic-druid-framework.txt: new documentation
 
